@@ -1,5 +1,5 @@
 {
-    "$schema": "https://json-schema.org/draft/2019-09/hyper-schema",
+    "$schema": "https://json-schema.org/draft/2019-09/schema",
     "$id": "https://json-schema.org/draft/2019-09/links",
     "title": "Link Description Object",
     "allOf": [
@@ -36,7 +36,7 @@
                     "format": "uri-template"
                 },
                 "hrefSchema": {
-                    "$recursiveRef": "https://json-schema.org/draft/2019-09/hyper-schema",
+                    "$ref": "https://json-schema.org/draft/2019-09/hyper-schema",
                     "default": false
                 },
                 "templatePointers": {
@@ -63,7 +63,7 @@
                     "type": "string"
                 },
                 "targetSchema": {
-                    "$recursiveRef": "https://json-schema.org/draft/2019-09/hyper-schema",
+                    "$ref": "https://json-schema.org/draft/2019-09/hyper-schema",
                     "default": true
                 },
                 "targetMediaType": {
@@ -71,7 +71,7 @@
                 },
                 "targetHints": { },
                 "headerSchema": {
-                    "$recursiveRef": "https://json-schema.org/draft/2019-09/hyper-schema",
+                    "$ref": "https://json-schema.org/draft/2019-09/hyper-schema",
                     "default": true
                 },
                 "submissionMediaType": {
@@ -79,7 +79,7 @@
                     "default": "application/json"
                 },
                 "submissionSchema": {
-                    "$recursiveRef": "https://json-schema.org/draft/2019-09/hyper-schema",
+                    "$ref": "https://json-schema.org/draft/2019-09/hyper-schema",
                     "default": true
                 },
                 "$comment": {
